--- a/package.json
+++ b/package.json
@@ -7,21 +7,34 @@
   "author": "claude <xxs1992@foxmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot",
+    "start": "node server",
+    "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client.config.js",
     "clean": "rm -rf ./dist",
-    "build": "webpack"
+    "build": "webpack --config=./config/webpack_client.config.js"
   },
   "dependencies": {
+    "autobind-decorator": "^1.4.0",
+    "classnames": "^2.2.5",
+    "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
+    "koa": "^2.2.0",
+    "koa-router": "^7.1.1",
     "react": "^15.5.4",
+    "react-cqtoolbox": "^1.0.12",
     "react-dom": "^15.5.4",
+    "react-notification-system": "^0.2.14",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "simditor": "^2.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.0.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -30,11 +43,16 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
