--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
     "koa-router": "^7.1.1",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-cqtoolbox": "^1.0.12",
     "react-dom": "^15.5.4",
