--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
     "koa-router": "^7.1.1",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-cqtoolbox": "^1.0.12",
