--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client_dev.config.js",
     "clean": "rm -rf ./dist",
     "build": "webpack --config=./config/webpack_client_production.config.js",
-    "server" : "node server.js"
+    "server": "node server.js"
   },
   "dependencies": {
     "autobind-decorator": "^1.4.0",
@@ -20,7 +20,9 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
@@ -42,11 +44,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "koa-webpack-middleware": "^1.0.5",
     "node-sass": "^4.5.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
