--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "claude <xxs1992@foxmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node dev/index.js",
     "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client_dev.config.js",
     "clean": "rm -rf ./dist && rm -rf ./server_dist",
     "build": "webpack --config=./config/webpack_client_production.config.js",
@@ -53,12 +53,14 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "http-shutdown": "^1.2.0",
     "koa-webpack-middleware": "^1.0.5",
     "node-sass": "^4.5.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
     "sass-loader": "^6.0.5",
+    "source-map-support": "^0.4.15",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
