--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build_client_pro": "webpack --config=./config/webpack_client_production.config.js",
     "build_server_pro": "webpack --config=./config/webpack_server_production.config.js",
     "pm2_local": "pm2 startOrRestart ecosystem.config.js",
-    "deploy-dev": "pm2 deploy ecosystem.config.js dev",
-    "deploy-pro": "pm2 deploy ecosystem.config.js production"
+    "deploy-dev": "pm2 deploy ecosystem.config.js dev --force",
+    "deploy-pro": "pm2 deploy ecosystem.config.js production --force"
   },
   "dependencies": {
     "autobind-decorator": "^1.4.0",
