--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autobind-decorator": "^1.4.0",
     "classnames": "^2.2.5",
     "express": "^4.15.2",
+    "handlebars": "^4.0.10",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
