--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client_dev.config.js",
     "clean": "rm -rf ./dist && rm -rf ./server_dist && rm -rf ./release",
     "build": "npm run build_client_pro && npm run build_server_pro",
-    "build_client_dev": "webpack --config=./config/webpack_client_dev.config.js",
-    "build_server_dev": "webpack --config=./config/webpack_server_dev.config.js",
+    "build_client_dev": "webpack  --display-error-details --config=./config/webpack_client_dev.config.js",
+    "build_server_dev": "webpack  --display-error-details --config=./config/webpack_server_dev.config.js",
     "build_client_pro": "webpack --config=./config/webpack_client_production.config.js",
     "build_server_pro": "webpack --config=./config/webpack_server_production.config.js",
     "pm2_local": "pm2 startOrRestart ecosystem.config.js",
@@ -48,8 +48,10 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -61,6 +63,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "http-shutdown": "^1.2.0",
+    "isomorphic-style-loader": "^2.0.0",
     "node-sass": "^4.5.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
