服务器端端Css module 还是不行啊

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client_dev.config.js",
     "clean": "rm -rf ./dist && rm -rf ./server_dist && rm -rf ./release",
     "build": "npm run build_client_pro && npm run build_server_pro",
-    "build_client_dev": "webpack  --display-error-details --config=./config/webpack_client_dev.config.js",
+    "build_client_dev": "webpack   --config=./config/webpack_client_dev.config.js",
     "build_server_dev": "webpack  --display-error-details --config=./config/webpack_server_dev.config.js",
     "build_client_pro": "webpack --config=./config/webpack_client_production.config.js",
     "build_server_pro": "webpack --config=./config/webpack_server_production.config.js",
@@ -63,7 +63,6 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "http-shutdown": "^1.2.0",
-    "isomorphic-style-loader": "^2.0.0",
     "node-sass": "^4.5.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
