--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
     "react": "^15.5.4",
-    "react-cqtoolbox": "^1.0.12",
     "react-dom": "^15.5.4",
     "react-notification-system": "^0.2.14",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.6.0",
     "simditor": "^2.3.6"
   },
@@ -63,6 +63,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "http-shutdown": "^1.2.0",
+    "ignore-loader": "^0.1.2",
     "node-sass": "^4.5.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
