--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chalk": "^1.1.3",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.1",
     "express-to-koa": "^1.0.5",
