--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
+    "koa2-connect": "^1.0.2",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
@@ -58,7 +59,6 @@
     "chalk": "^1.1.3",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.1",
-    "express-to-koa": "^1.0.5",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
