--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-notification-system": "^0.2.15",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "simditor": "^2.3.6"
   },
   "devDependencies": {
@@ -68,8 +70,9 @@
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "source-map-support": "^0.4.16",
+    "source-map-support": "^0.5.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
