--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "simditor": "^2.3.6"
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -65,13 +64,11 @@
     "html-webpack-plugin": "^2.30.1",
     "http-shutdown": "^1.2.0",
     "ignore-loader": "^0.1.2",
-    "node-sass": "^4.5.3",
     "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^10.0.0",
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
-    "sass-loader": "^6.0.6",
     "source-map-support": "^0.5.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
