--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "build_server_pro": "webpack --config=./config/webpack_server_production.config.js",
     "pm2_local": "pm2 startOrRestart ecosystem.config.js",
     "deploy-dev": "pm2 deploy ecosystem.config.js dev --force",
-    "deploy-pro": "pm2 deploy ecosystem.config.js production --force"
+    "deploy-pro": "pm2 deploy ecosystem.config.js production --force",
+    "deploy-pro-babel": "NODE_ENV=production babel server  -d server_dist && NODE_ENV=production babel client  -d client_dist"
   },
   "dependencies": {
+    "asset-require-hook": "^1.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "classnames": "^2.2.5",
+    "css-modules-require-hook": "^4.2.3",
     "handlebars": "^4.0.10",
     "highcharts": "^6.0.4",
     "isomorphic-fetch": "^2.2.1",
@@ -30,8 +35,8 @@
     "koa-static": "^4.0.1",
     "koa2-connect": "^1.0.2",
     "moment": "^2.18.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -53,22 +58,21 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "chalk": "^2.1.0",
-    "chokidar": "^1.7.0",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "ignore-loader": "^0.1.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.6",
-    "precss": "^2.0.0",
+    "precss": "^3.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "source-map-support": "^0.5.0",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
-    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-node-externals": "^1.6.0"
