--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "deploy-pro-babel": "NODE_ENV=production babel server  -d server_dist && NODE_ENV=production babel client  -d client_dist"
   },
   "dependencies": {
-    "asset-require-hook": "^1.2.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
+    "antd": "^3.1.4",
     "classnames": "^2.2.5",
-    "css-modules-require-hook": "^4.2.3",
     "handlebars": "^4.0.10",
     "highcharts": "^6.0.4",
+    "ignored-loader": "^0.0.1",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -49,7 +47,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-css-modules-transform": "^1.2.7",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
