--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "webpack-dev-server": "webpack-dev-server --inline --hot --config=./config/webpack_client_dev.config.js",
     "clean": "rm -rf ./dist && rm -rf ./server_dist && rm -rf ./release",
     "build": "npm run build_client_pro && npm run build_server_pro",
-    "build_client_dev": "webpack   --config=./config/webpack_client_dev.config.js",
-    "build_server_dev": "webpack  --display-error-details --config=./config/webpack_server_dev.config.js",
-    "build_client_pro": "webpack --config=./config/webpack_client_production.config.js",
+    "build_client_dev": "webpack --config=./config/webpack_client_dev.config.js && webpack --config=./config/webpack_client_dev_mobile.config.js",
+    "build_server_dev": "webpack --display-error-details --config=./config/webpack_server_dev.config.js",
+    "build_client_pro": "webpack --config=./config/webpack_client_production.config.js && webpack --config=./config/webpack_client_production_mobile.config.js",
     "build_server_pro": "webpack --config=./config/webpack_server_production.config.js",
     "pm2_local": "pm2 startOrRestart ecosystem.config.js",
     "deploy-dev": "pm2 deploy ecosystem.config.js dev --force",
@@ -21,7 +21,7 @@
     "deploy-pro-babel": "NODE_ENV=production babel server  -d server_dist && NODE_ENV=production babel client  -d client_dist"
   },
   "dependencies": {
-    "antd": "^3.1.4",
+    "antd": "^3.1.6",
     "classnames": "^2.2.5",
     "handlebars": "^4.0.10",
     "highcharts": "^6.0.4",
@@ -29,7 +29,7 @@
     "jquery": "^3.3.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.2.1",
+    "koa-router": "^7.4.0",
     "koa-static": "^4.0.1",
     "koa2-connect": "^1.0.2",
     "moment": "^2.18.1",
@@ -65,8 +65,8 @@
     "postcss-loader": "^2.0.6",
     "precss": "^3.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
-    "source-map-support": "^0.5.0",
-    "style-loader": "^0.19.1",
+    "source-map-support": "^0.5.3",
+    "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^2.0.4",
