--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.5",
     "handlebars": "^4.0.10",
     "ignored-loader": "^0.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
