--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -70,6 +71,7 @@
     "postcss-loader": "^2.0.6",
     "precss": "^3.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
     "source-map-support": "^0.5.3",
     "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
