--- a/package.json
+++ b/package.json
@@ -24,23 +24,27 @@
   "dependencies": {
     "antd": "^3.1.6",
     "classnames": "^2.2.5",
+    "form-data": "^2.3.2",
     "handlebars": "^4.0.10",
     "ignored-loader": "^0.0.1",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-proxies": "^0.7.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.1",
     "koa2-connect": "^1.0.2",
-    "moment": "^2.18.1",
+    "moment": "^2.22.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
